--- a/src/app/components/images/images.component.html
+++ b/src/app/components/images/images.component.html
@@ -1,1 +1,11 @@
-<p>images works!</p>
+<div class="container">
+  <h1>Images</h1>
+  <ul class="list-group">
+    <a
+      [routerLink]="['/image','XXXX']"
+      class="list-group-item list-group-item-action animate__animated animate__bounce animate__dafeIn"
+    >
+      TEST
+    </a>
+  </ul>
+</div>
