--- a/src/app/components/images/images.component.html
+++ b/src/app/components/images/images.component.html
@@ -2,10 +2,11 @@
   <h1>Images</h1>
   <ul class="list-group">
     <a
-      [routerLink]="['/image','XXXX']"
+      *ngFor="let image of images"
+      [routerLink]="['/image',image.id]"
       class="list-group-item list-group-item-action animate__animated animate__bounce animate__dafeIn"
     >
-      TEST
+      {{image.id}} - {{image.author}}
     </a>
   </ul>
 </div>
