--- a/src/app/components/images/images.component.html
+++ b/src/app/components/images/images.component.html
@@ -6,64 +6,28 @@
         mat-button
         class="mr-2"
         (click)="viewMode = 'cards'"
-        [ngClass]="{'bg-pink-500 text-white': viewMode === 'cards'}"
+        [ngClass]="{ 'bg-pink-500 text-white': viewMode === 'cards' }"
       >
         Cards
       </button>
       <button
         mat-button
         (click)="viewMode = 'table'"
-        [ngClass]="{'bg-pink-500 text-white': viewMode === 'table'}"
+        [ngClass]="{ 'bg-pink-500 text-white': viewMode === 'table' }"
       >
         Table
       </button>
     </div>
   </div>
-  <div *ngIf="viewMode === 'cards'" class="flex flex-wrap gap-6">
-    <div
-      *ngFor="let image of images"
-      class="text-white flex flex-col my-4 max-w-80 transition ease-in-out duration-300 hover:border-2 hover:border-pink-500 hover:text-pink-500 rounded-xl"
-    >
-      <mat-card class="animate__animated animate__bounce animate__fadeIn transition ease-in-out duration-300">
-        <mat-card-header>
-          <mat-card-title>{{ image.id }} - {{ image.author }}</mat-card-title>
-        </mat-card-header>
-        <mat-card-actions>
-          <button
-            mat-button
-            class="transition ease-in-out duration-300 hover:bg-pink-500 hover:text-white"
-            [routerLink]="['/image', image.id]"
-          >
-            View
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
+  <div *ngIf="isLoading" class="flex justify-center items-center h-64">
+    <mat-spinner></mat-spinner>
   </div>
-  <div *ngIf="viewMode === 'table'">
-    <table mat-table [dataSource]="images" class="mat-elevation-z8">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> ID </th>
-        <td mat-cell *matCellDef="let image"> {{image.id}} </td>
-      </ng-container>
-      <ng-container matColumnDef="author">
-        <th mat-header-cell *matHeaderCellDef> Author </th>
-        <td mat-cell *matCellDef="let image"> {{image.author}} </td>
-      </ng-container>
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
-        <td mat-cell *matCellDef="let image">
-          <button
-            mat-button
-            class="transition ease-in-out duration-300 hover:bg-pink-500 hover:text-white"
-            [routerLink]="['/image', image.id]"
-          >
-            View
-          </button>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+  <div *ngIf="!isLoading" [@listAnimation]>
+    <div *ngIf="viewMode === 'cards'" class="flex flex-wrap gap-6">
+      <app-card *ngFor="let image of images" [image]="image"></app-card>
+    </div>
+    <div *ngIf="viewMode === 'table'">
+      <app-grid [images]="images"></app-grid>
+    </div>
   </div>
 </div>
