--- a/src/app/components/images/images.component.html
+++ b/src/app/components/images/images.component.html
@@ -1,6 +1,6 @@
 <div class="container py-10 text-white">
   <div class="flex justify-between items-center mb-4">
-    <h1 class="text-2xl font-bold">Images</h1>
+    <h1 class="text-2xl font-bold">Cats</h1>
     <div>
       <button
         mat-button
