--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -1,38 +1,32 @@
-<div class="container text-white py-10">
-  <div *ngIf="image" class="row animate__animated animate__bounce animate__fadeIn">
-    <div class="col-md-9">
-      <h1>{{ image?.author }}</h1>
+<div class="container text-white py-10 mx-auto">
+  <div
+    *ngIf="image"
+    class="flex justify-between animate__animated animate__bounce animate__fadeIn"
+  >
+    <div class="flex flex-col gap-6 w-1/2">
+      <h1 class="text-2xl font-semibold underline self-center">{{ image.author }}</h1>
       <img
-        class="rounded"
-        style="width: 80%; height: 80%"
-        [src]="image?.download_url"
-        [alt]="image?.author"
+        class="w-full aspect-square h-auto rounded-xl shadow-xl object-cover"
+        [src]="image.download_url"
+        [alt]="image.author"
       />
+      <mat-accordion>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title> Details </mat-panel-title>
+          </mat-expansion-panel-header>
+          <p><strong>Id:</strong> {{ image.id }}</p>
+          <p><strong>Author:</strong> {{ image.author }}</p>
+          <p><strong>Width:</strong> {{ image.width }}</p>
+          <p><strong>Height:</strong> {{ image.height }}</p>
+          <p>
+            <strong>Url: </strong>
+            <a [href]="image.url" target="_blank">{{ image.url }}</a>
+          </p>
+        </mat-expansion-panel>
+      </mat-accordion>
     </div>
-    <div class="col-md-3">
-      <a class="btn btn-primary" [routerLink]="['/']">Back</a>
-      <button mat-button (click)="toggleDetails()">
-        Show all details
-      </button>
-    </div>
-  </div>
-  <div *ngIf="showDetails">
-    <mat-accordion>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            Details
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <p><strong>Id:</strong> {{ image?.id }}</p>
-        <p><strong>Author:</strong> {{ image?.author }}</p>
-        <p><strong>Width:</strong> {{ image?.width }}</p>
-        <p><strong>Height:</strong> {{ image?.height }}</p>
-        <p>
-          <strong>Url:</strong>
-          <a [href]="image?.url" target="_blank">{{ image?.url }}</a>
-        </p>
-      </mat-expansion-panel>
-    </mat-accordion>
+
+    <a class="btn btn-primary self-start px-7 py-2 hover:shadow-xl" [routerLink]="['/']">Back</a>
   </div>
 </div>
